Thread CPU Load event may contain wrong data for CPU time under certain conditions

XMLWordPrintable

    • jfr
    • b21

        If reported CPU time is too large we may accidentally reset stored CPU time for the thread resulting in following evens containing all CPU time from the beginning of time

        (contributed by nikolay.martynov@datadoghq.com)

              Assignee:
              Jaroslav Bachorík
              Reporter:
              Jaroslav Bachorík
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: