8243489: Thread CPU Load event may contain wrong data for CPU time under certain conditions

Reviewed-by: jbachorik